fix api of get hot topics
