# docs/swagger.json
@@ -28,9 +28,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "get topics since the time(seconds)",
-                        "name": "since",
+                        "type": "boolean",
+                        "description": "get lastest hot topics. value is true",
+                        "name": "latest",
                         "in": "query",
                         "required": true
                     }
@@ -205,40 +205,6 @@
                     }
                 }
             }
-        },
-        "/v1/topic-review/{community}/publish": {
-            "get": {
-                "security": [
-                    {
-                        "Internal": []
-                    }
-                ],
-                "description": "get topics to publish",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "TopicReview"
-                ],
-                "summary": "GetToPublish",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "lowercase community name, like openubmc, cann",
-                        "name": "community",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/app.TopicsToPublishDTO"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -296,17 +262,6 @@
                 }
             }
         },
-        "app.TopicsToPublishDTO": {
-            "type": "object",
-            "properties": {
-                "topics": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.TopicToReview"
-                    }
-                }
-            }
-        },
         "app.TopicsToReviewDTO": {
             "type": "object",
             "properties": {
@@ -336,7 +291,27 @@
                         "$ref": "#/definitions/domain.DiscussionSource"
                     }
                 },
+                "id": {
+                    "type": "string"
+                },
+                "order": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/app.statusLogDTO"
+                },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.statusLogDTO": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 }
             }
