# hottopicmanagement/controller/hot_topic.go
@@ -6,12 +6,13 @@ Copyright (c) Huawei Technologies Co., Ltd. 2023. All rights reserved
 package controller
 
 import (
-	"strconv"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 
 	commonctl "github.com/opensourceways/hot-topic-website-backend/common/controller"
 	"github.com/opensourceways/hot-topic-website-backend/hottopicmanagement/app"
+	"github.com/opensourceways/hot-topic-website-backend/utils"
 )
 
 func AddInternalRouterForHotTopicController(
@@ -70,25 +71,18 @@ func (ctl *HotTopicController) Add(ctx *gin.Context) {
 // @Description  get hot topics
 // @Tags         HotTopic
 // @Param        community   path    string             true    "lowercase community name, like openubmc, cann"
-// @Param        since       query   int64              true    "get topics since the time(seconds)"
+// @Param        latest      query   bool               true    "get lastest hot topics. value is true"
 // @Accept       json
 // @Security     Internal
 // @Success      200    {object}    app.HotTopicsDTO{}
 // @Router       /v1/hot-topic/{community} [get]
 func (ctl *HotTopicController) Get(ctx *gin.Context) {
-	var since int64
-	if v, ok := ctx.GetQuery("since"); ok {
-		v1, err := strconv.ParseInt(v, 10, 64)
-		if err != nil {
-			commonctl.SendBadRequestParam(ctx, err)
-
-			return
-		}
-
-		since = v1
+	var date int64
+	if v, ok := ctx.GetQuery("latest"); ok && strings.ToLower(v) == "true" {
+		date = utils.GetLastFriday().Unix()
 	}
 
-	if v, err := ctl.reviewService.GetHotTopics(ctx.Param("community"), since); err != nil {
+	if v, err := ctl.reviewService.GetHotTopics(ctx.Param("community"), date); err != nil {
 		commonctl.SendError(ctx, err)
 	} else {
 		commonctl.SendRespOfGet(ctx, v)
